'修改部分页面命名'

--- a/src/main/webapp/Store.html
+++ b/src/main/webapp/Store.html
@@ -207,7 +207,7 @@
 									<input type="button" value="查询" class="ui-form__btn btn btn-dark" style="min-width:80px;font-size:14px;line-height:40px"/>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									<input type="button" value="添加店铺" class="ui-form__btn btn btn-dark" onclick="window.location='StoreAdd.html'" style="min-width:80px;font-size:14px;line-height:40px"/>
+									<input type="button" value="添加店铺" class="ui-form__btn btn btn-dark" onclick="window.location='store_add.html'" style="min-width:80px;font-size:14px;line-height:40px"/>
                             	</div>
                             </div>
                     	</form>
