商家分页查询订单

--- a/src/main/webapp/Unfilled-Order.html
+++ b/src/main/webapp/Unfilled-Order.html
@@ -239,6 +239,7 @@
                                        	 <tbody id="order1"></tbody>
                                		</table>	
                              	</div>
+                                <div id="fenye"></div>
                             </div>
                         </form>
                     </div>
@@ -369,7 +370,7 @@
 <script src="static/js/order_detail.js"></script>
 <script>
     $(function () {
-        getorder1();
+        getorder1(1);
     })
 </script>
 </body>
