'店铺管理只剩商家查询商店'

--- a/src/main/webapp/StoreDetails.html
+++ b/src/main/webapp/StoreDetails.html
@@ -395,6 +395,7 @@
 <script src="static/jq/manageItems.js"></script>
 <script src="static/jq/showitems.js"></script>
 <script src="static/jq/store.js"></script>
+<script src="static/jq/tool.js"></script>
 </body>
 
 </html>
