'Store页面修改标签id'

--- a/src/main/webapp/Store.html
+++ b/src/main/webapp/Store.html
@@ -195,11 +195,14 @@
                         <form action="">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <input class="form-control" type="text" placeholder="Your Select">
+                                    <input class="form-control" type="text" placeholder="Your Select" id="research" name="research">
                                     <!-- <input type="text" class="input-text "> -->
                                 </div>
                                 <div class="col-md-6">
-                                    <select class="selectpicker" style="height:40px">
+
+
+                                    <!--查询-->
+                                    <select class="selectpicker" style="height:40px" id="condition" name="condition">
                                         <option value="stId">店铺ID</option>
                                         <option value="stName">店铺名</option>
                                     </select>
