收藏夹接口

--- a/src/main/webapp/StoreDetails.html
+++ b/src/main/webapp/StoreDetails.html
@@ -211,8 +211,9 @@
                             	</div>
                             	<div class="col-md-6" >
 									<select class="selectpicker" style="height:40px" id="iStatus">
-										<option value="0">正常</option>
-										<option value="1">异常</option>
+										<option value="0">正在销售</option>
+										<option value="1">正常下架</option>
+                                        <option value="2">强制下架</option>
 									</select>
 									&nbsp;&nbsp;
 									<input type="button"  value="查询" onclick="chaxun()" class="ui-form__btn btn btn-dark" style="min-width:80px;font-size:14px;line-height:40px"/>
