--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -143,7 +143,7 @@
                         <li><a href="order_over.html"><h5>售 后</h5></a>
                         </li>
                         <!--收藏夹入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="collection-1.html"><h5>收 藏</h5></a>
+                        <li><a href="collection.html"><h5>收 藏</h5></a>
                         </li>
                     </ul>
                 </div>
