更改页面搜索按钮

--- a/src/main/webapp/shop_single.html
+++ b/src/main/webapp/shop_single.html
@@ -117,8 +117,6 @@
         </div>
         <!--搜索的关闭按钮/////////////////////////////////////////////////////////////-->
         <button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>
-    </div>
-    <button class="search-close close" type="button"><i class="fa fa-times"></i></button>
 </div>
 <header class="header-1 header header-color-black header-topbar-hidden header-boxed-width navbar-fixed-top header-background-trans header-navibox-1-left header-navibox-2-right">
     <!--<div class="container con-->
@@ -146,8 +144,8 @@
             </div>
             <div class="header-navibox-2">
                 <ul class="nav navbar-nav clearfix vcenter">
-                   <!-- <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
-                    </li>-->
+                    <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
+                    </li>
                     <!--用户个人信息模块///////////////////////////////////////////////////////////////////////////////////////-->
                     <li><a href="order.html"><h5>我 的 订 单</h5></a>
                     </li>
