--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -102,7 +102,8 @@
                         <form class="search-global">
                             <input class="search-global__input" type="text" placeholder="Type to search"
                                    autocomplete="off" name="s" value="" id="search">
-                            <button class="search-global__btn" onclick="search1()"><i class="icon stroke icon-Search"></i>
+                            <button class="search-global__btn" onclick="search1()">
+                                <i class="icon stroke icon-Search"></i>
                             </button>
                             <div class="search-global__note">Begin typing your search above and press return to
                                 search.
